fix card layout issues

--- a/coolstore-fe/src/app/components/product-card/product-card.component.css
+++ b/coolstore-fe/src/app/components/product-card/product-card.component.css
@@ -8,3 +8,29 @@
   height: 200px;
 }
 
+.product-card {
+  display:flex;
+  flex-direction: column;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+}
+
+.more-button {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+}
+
+.product-card-content {
+  text-align: center;
+  flex-grow: 1;
+  overflow: auto;
+
+}
+
+.mat-card-header {
+  flex-shrink: 0;
+}
